fix submenu on mobile

--- a/src/shared/ui/Submenu/Submenu.module.scss
+++ b/src/shared/ui/Submenu/Submenu.module.scss
@@ -126,16 +126,3 @@
     right: 150px;
   }
 }
-
-@media screen and (max-width: 500px) {
-  .category {
-    .content {
-      top: 170px;
-    }
-  }
-  .sort-by {
-    .content {
-      top: 170px;
-    }
-  }
-}
